<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>node_templates</name>
  <version>0.0.0</version>
  <description>Template nodes demonstrating action and service patterns</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>interface_templates</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
